--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,19 @@
 * {
-
+text-align: center;
+background-color: slategray;
+color: white;
+font-size: 26px;
 }
 
-nav, ul, li {
-  text-align: center;
+li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: inline;
+  border: black solid 1px;
+}
 
+.active {
+  color: red;
+  text-decoration: none;
 }
