--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,13 @@ li {
   border: black solid 1px;
 }
 
+
 .active {
-  color: red;
+  background-color: black;
   text-decoration: none;
+}
+
+li:hover, .active:hover {
+  color: blue;
+  background-color: lightblue;
 }
