--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ li {
 li a {
   color: white;
   text-align: center;
-  /* padding: 7px; */
+  padding: 0 5px 0 0;
   text-decoration: none;
   font-weight: bold;
 }
