--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ li a {
   text-align: center;
   padding: 0 5px 0 0;
   text-decoration: none;
-  font-weight: bold;	
+  font-weight: bold;
 }
 .active {
   color: lime;
@@ -34,7 +34,10 @@ li a {
 }
 /* NAV BAR END */
 
+hr {
+  border: 1px solid lime;
 
+}
 
 h1 {
 	font-size: 2em;
