--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,8 @@ li a {
   text-align: center;
   padding: 0 5px 0 0;
   text-decoration: none;
-  font-weight: bold;
+  margin: 0 20px;
+  font-weight: bolder;
 }
 @keyframes blink {
    50% { border-color: black; }
