--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@ body {
   /* padding-top: 320px; */
 }
 
-
 h1 {
 	font-size: 1.5em;
 }
@@ -70,7 +69,20 @@ hr {
 
 }
 
+.pokeSubmit {
+  border-radius: 50%;
+  background-color: red;
+  width: 50px;
+  height: 50px;
+}
 
+.reset {
+  border-radius: 50%;
+  background-color: green;
+  width: 50px;
+  height: 50px;
+
+}
 
 /* Change the link color to #111 (black) on hover and text to green */
 li a:hover {
