--- a/css/media.css
+++ b/css/media.css
@@ -1,59 +1,49 @@
 
 @media (min-width: 875px) {
   /* header/navbar section content */
-  h1 {
-    font-size: 2em;
-  }
   .navbar {
-
     text-align: center;
-    width: 100%;
-    margin: 0 auto;
     position: fixed;
-    top: 0;
+    padding: 0;
+    margin: 0;
     left: 0;
+    top: 0;
   }
-  .nav-col {
-    float: left;
+
+
+  .nav-row ul li{
+    float: right;
+    display: inline-block;
+    border: 1px solid green;
   }
+
   .main-header {
-    /* float:left; */
     width: 19%;
     border: 1px blue solid;
     margin: 0;
     padding: 0;
   }
+
   .main-nav {
     margin: 0;
     padding: 0;
     float: right;
-    width: 80%;
-    /* border: 1px green solid; */
-
+    width: 79%;
   }
-  nav ul li{
-    margin: 0px;
-    padding: 0px;
-    /* border: 1px solid lime; */
 
-  }
+
   @keyframes blink {
      50% { border-color: black; }
   }
   .active {
     border-right: 20px lime solid;
-
     animation: blink .5s step-end infinite alternate;
-    }
-/* Body Stuff */
-
-  nav ul li {
-    display: inline-block; /* Apparently this doesn't work in IE7 */
-    *display: inline; /* this is here for IE7*/
-    zoom:1;
   }
-  body {
-    padding-top: 150px;
-  }
+  .main-content {
+    padding-top: 230px;
 
+  }
+  hr {
+    margin-top: 40px;
+  }
   }
