CodeLouisville EOD 2/27/19 - New Project - Pokemon Go Snapshots

--- a/archive/Green Page/css/media.css
+++ b/archive/Green Page/css/media.css
@@ -38,6 +38,7 @@
     width: 50%;
     float:left;
   }
+
   /* .primarycontent {
     width: 30%;
   }
@@ -62,3 +63,10 @@
     margin-top: 114px;
   }
   }
+ @media (max-width: 1000px) {
+   body {
+     margin: auto;
+     max-width: 1000px;
+   }
+
+ }
