--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,14 @@
 /* Universals */
 * {
   text-align: center;
+  /* font-family: "Comic Sans MS", cursive, sans-serif; */
+  font-family: 'Cousine'; font-size: 26px;
+
 }
+/* @font-face {
+      font-family: Roboto Bold Condensed;
+      src: url(./fonts/comicNeue-Regular.ttf);
+} */
 /* Navigation */
 ul, a {
   text-decoration: none;
@@ -9,7 +16,7 @@ ul, a {
 }
 
 ul {
-  padding: 0px;
+  padding: 0;
 }
 
 nav ul li a {
@@ -30,7 +37,6 @@ nav ul li a {
 li a:hover {
   color: #f9c07d;
   background-color: #d23c3d;
-
 }
 
 
@@ -46,7 +52,15 @@ body {
   border: blue 1px solid;
 
 }
+.fp-pics img {
+  width: 100%;
+  height: 100%;
+}
 
+.fp-pics {
+  /* display: flex; */
+  /* flex-direction: column; */
+}
 /* Footer */
 
 
