--- a/SchoolProjects/Flexbox/FB1/css/flexbox.css
+++ b/SchoolProjects/Flexbox/FB1/css/flexbox.css
@@ -5,18 +5,21 @@
 .container {
   display: flex;
   flex-wrap: wrap;
+  height: 450px;
 }
 
 .item {
-  flex-grow: 1;
-
+  flex: 1;
 }
 
 .item-1 {
-  flex-grow: 3;
+  align-self: flex-end;
 }
+.item-4 {
+  align-self: center;
 
+}
 .item-2 {
-  flex-grow: 2;
+  flex: 2;
 
 }
