--- a/SchoolProjects/Flexbox/FB1/css/flexbox.css
+++ b/SchoolProjects/Flexbox/FB1/css/flexbox.css
@@ -4,22 +4,11 @@
 
 .container {
   display: flex;
-  flex-wrap: wrap;
-  height: 450px;
+  min-height: 50vh;
+
 }
 
 .item {
-  flex: 1;
-}
-
-.item-1 {
-  align-self: flex-end;
-}
-.item-4 {
-  align-self: center;
-
-}
-.item-2 {
-  flex: 2;
+  margin: auto;
 
 }
