--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,9 @@
 /* Universals */
 * {
   text-align: center;
-  /* font-family: "Comic Sans MS", cursive, sans-serif; */
   font-family: 'Cousine'; font-size: 26px;
 
 }
-/* @font-face {
-      font-family: Roboto Bold Condensed;
-      src: url(./fonts/comicNeue-Regular.ttf);
-} */
 /* Navigation */
 ul, a {
   text-decoration: none;
@@ -20,23 +15,12 @@ ul {
 }
 
 nav ul li a {
-  background: black;
-
-  width: 100%;
-  height: 100%;
-  color: #d23c3d;
-  text-align: center;
-  font-size: 2em;
-  display: inline-block;
-  border: 1px solid red;
-  border-radius: 20px;
-  margin: 2px 0;
-  padding: 10px 0 ;
+  color: rede;
+  border: 1px yellow solid;
 }
 
 li a:hover {
-  color: #f9c07d;
-  background-color: #d23c3d;
+
 }
 
 
@@ -50,21 +34,27 @@ body {
 
 .mainBody {
   border: blue 1px solid;
+.cat {
+  width: 300px;
+  height: 300px;
+}
+}
+
+
+.none {
+  float: right;
+  margin: 20px;
 
 }
-.fp-pics img {
-  width: 100%;
-  height: 100%;
-}
-
 .fp-pics {
-  /* display: flex; */
+  display: flex;
+  flex-wrap: wrap;
   /* flex-direction: column; */
 }
 /* Footer */
 
 
-/*  Clear Fix Stuff */
+/*  Clear Fix Thing */
 .clearfix::after {
   content: " ";
   clear: both;
