--- a/SchoolProjects/Flexbox/FB2/css/flexbox.css
+++ b/SchoolProjects/Flexbox/FB2/css/flexbox.css
@@ -3,36 +3,31 @@
 ==================================== */
 
 @media (min-width: 769px) {
+
 	.main-header,
-	.main-nav
-	.row {
+	.main-nav,
+	.row,
+	.col {
 		display: flex;
 	}
 
 	.main-header {
 		flex-direction: column;
 		align-items: center;
-
 	}
+
 	.col {
 		flex: 1;
+		flex-direction: column;
 	}
+
 }
 
-/* @media (min-width: 1025px) { */
-	.main-header,
-	.main-nav,
-	.row {
-		display: flex;
-		flex-direction: row;
-	}
+@media (min-width: 1025px) {
 
-	.primary {
-		flex: 2;
-	}
 	.main-header {
+		flex-direction: row;
 		justify-content: space-between;
-		align-items: center;
-
 	}
+
 }
