--- a/css/styles.css
+++ b/css/styles.css
@@ -58,20 +58,20 @@ body {
   background-color: #AAC5CE;
   box-shadow: 2px 2px 5px;
   border-radius: 10px;
-  padding: 10px;
+  padding: 2em;
   border: 1px black solid;
   margin: 10px;
 
 }
 .mainBody {
   /* border: blue 1px solid; */
+
+}
+
 .cat {
   width: 300px;
   height: 300px;
 }
-}
-
-
 .none {
   float: right;
   margin: 20px;
