--- a/css/styles.css
+++ b/css/styles.css
@@ -4,31 +4,28 @@
   font-family: 'Comic Sans MS'; font-size: 26px;
 
 }
+
 /* Navigation */
 .navbar {
   width: 100%;
   padding-top: 20px;
 }
-
 ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-h1 {
-  font-family: 'Satisfy';
-}
 li a {
   color: black;
   display: block;
-  margin: 0 20px;;
+  margin: 0 10px;
   padding: .5%;
   text-decoration: none;
   font-weight: bold;
   background-color: #AAC5CE;
   border: 1px black solid;
   box-shadow: 2px 2px 5px;
-  border-radius: 20px;
+  border-radius: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
   /* height: 200px; */
@@ -41,10 +38,15 @@ li a:hover {
 
 
 /* Body Content */
+.mainBody h1 {
+  font-family: 'Satisfy';
+}
+
 .main-section {
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* flex: 80%; */
+  /* Move To Media Queries */
+  /* display: flex;
+  flex-direction: row;
+  flex: 50%; */
 
 }
 body {
@@ -72,18 +74,44 @@ body {
   width: 300px;
   height: 300px;
 }
-.none {
-  /* float: right; */
-  /* margin: 20px; */
-/* MOVE TO Media query   */
-}
-.fp-pics {
-  display: flex;
-  flex-wrap: wrap;
-  /* flex-direction: column; */
-}
+
+
 /* Footer */
 
+.dasfooter p {
+  font-size: 16px;
+}
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+.fa:hover {
+  background-color: #D3EAF3;
+  color: black;
+}
+.social {
+  padding: 20px;
+  font-size: 30px;
+  width: 25px;
+  height: 25px;
+  border-radius: 20%;
+  margin: 0 auto;
+  text-align: center;
+  text-decoration: none;
+  border: 2px solid black;
+  background-color: #AAC5CE;
+
+  color: black;
+}
+footer p, footer a {
+  font-size: 16px;
+}
+#top a {
+  position: relative;
+}
 
 /*  Clear Fix Thing */
 .clearfix::after {
