--- a/css/media.css
+++ b/css/media.css
@@ -13,15 +13,21 @@
   }
   nav ul li {
     flex: 1 15%;
+    padding: 0;
+    align-items: center;
     align-content: center;
+    text-align: center;
+    vertical-align: middle;
+    justify-content: center;
     /* height: 200px; */
   }
   nav ul li a {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    align-self: center;
     padding-top: 0;
     height: 75px;
-
-    text-align: center;
-    align-self: center;
 
 
 
