--- a/css/media.css
+++ b/css/media.css
@@ -18,16 +18,13 @@
     align-content: center;
     text-align: center;
     vertical-align: middle;
-    justify-content: center;
     /* height: 200px; */
   }
   nav ul li a {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    align-self: center;
-    padding-top: 0;
-    height: 75px;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    height: 30px;
 
 
 
