--- a/css/styles.css
+++ b/css/styles.css
@@ -28,16 +28,15 @@ li a:hover {
 
 .jumbotron {
   background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url('../img/hdimg.jpg');
+  filter: grayscale(100%);
+  /* background-size: cover; */
 }
 
-.grayOver {
-  color: black;
-}
+/* Images */
 .cat {
   height: 300px;
   width: 300px;
-
 }
 /* Body Content */
 .mainBody,
